@@ -32,6 +32,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Bug #1290333: Added a workaround for cjkcodecs' _codecs_cn build
+  problem on AIX.
+
 - Bug #869197: os.setgroups rejects long integer arguments
 
 - Bug #1344508, Fix UNIX mmap leaking file descriptors
